# Parallelism

./: .gitignore
1/: CMakeLists.txt  README.md  q.txt  sinus.cpp
2/: Graffic.xlsx  q.txt  Вывод_lab.docx
2/task1/: main.cpp
2/task1/prov/: .bat  CMakeLists.txt  graph.py  pr.cpp  report.md  results.txt  run.sh
2/task2/: CMakeLists.txt  main.cpp
2/task2/prov/: .bat  CMakeLists.txt  graph.py  pt.cpp  report.md  results.txt  run.sh
2/task3/: CMakeLists.txt  cnt_cores  cnt_cores.cpp  main.cpp  main2.cpp  report_end.md
2/task3/optimal/: main.cpp  main2.cpp
2/task3/prov1/: 1.bat  2.bat  graphs1.py  graphs2.py  main1.cpp  main2.cpp  report.md  results.txt  results2.txt  run1.sh  run2.sh
2/task3/prov2/: 1.bat  2.bat  CMakeLists.txt  graphs1.py  graphs2.py  main1.cpp  main2.cpp  report.md  results.txt  results2.txt  run1.sh  run2.sh
3/task1/: CMakeLists.txt  graph.py  main.cpp  report.md  results.txt  run.sh
3/task2/: CMakeLists.txt  main.cpp  pow.txt  q.txt  run.sh  sin.txt  sqrt.txt
3/task2/test/: CMakeLists.txt  pow_test.cpp  sin_test.cpp  sqrt_test.cpp
4/: main.py
6/: main.cpp
6/1_real/: main.cpp  run.bat
